Move files from public to root

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "tailwindcss": "^4.1.12"
   },
   "scripts": {
-    "arman": "npx @tailwindcss/cli -i ./src/input.css -o ./public/styles.css --watch"
+    "arman": "npx @tailwindcss/cli -i ./src/input.css -o ./styles.css --watch"
   }
 }
